test_output_utf8.txt

> nextn@0.1.0 test
> jest email-tool.test.ts

node.exe : PASS tests
/server/tools/email-t
ool.test.ts
At line:1 char:1
+ & "C:\Program Files
\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (PASS te   
 sts/serv...il-to    
ol.test.ts:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
FAIL src/app/dashboar
d/ceo/__tests__/email
-tool.test.ts
  ΓùÅ Test suite 
failed to run

    Jest encountered 
an unexpected token

    Jest failed to 
parse a file. This 
happens e.g. when 
your code or its 
dependencies use 
non-standard 
JavaScript syntax, 
or when Jest is not 
configured to 
support such syntax.

    Out of the box 
Jest supports Babel, 
which will be used 
to transform your 
files into valid JS 
based on your Babel 
configuration.

    By default 
"node_modules" 
folder is ignored by 
transformers.

    Here's what you 
can do:
     ΓÇó If you are 
trying to use 
ECMAScript Modules, 
see https://jestjs.io
/docs/ecmascript-modu
les for how to 
enable it.
     ΓÇó If you are 
trying to use 
TypeScript, see https
://jestjs.io/docs/get
ting-started#using-ty
pescript
     ΓÇó To have 
some of your 
"node_modules" files 
transformed, you can 
specify a custom "tra
nsformIgnorePatterns"
 in your config.
     ΓÇó If you need 
a custom 
transformation 
specify a 
"transform" option 
in your config.
     ΓÇó If you 
simply want to mock 
your non-JS modules 
(e.g. binary assets) 
you can stub them 
out with the 
"moduleNameMapper" 
config option.

    You'll find more 
details and examples 
of these config 
options in the docs:
    https://jestjs.io
/docs/configuration
    For information 
about custom 
transformations, see:
    https://jestjs.io
/docs/code-transforma
tion

    Details:

    
C:\Users\marte\Baked 
for Brands\bakedbot-f
or-brands\node_module
s\jose\dist\browser\i
ndex.js:1
    ({"Object.<anonym
ous>":function(module
,exports,require,__di
rname,__filename,jest
){export { 
compactDecrypt } 
from './jwe/compact/d
ecrypt.js';
                     
                     
                     
                     
  ^^^^^^

    SyntaxError: 
Unexpected token 
'export'

    [0m [90m 20 
|[39m         } 
[36mcatch[39m 
(decodeError) {
     [90m 21 |[39m 
            console[
33m.[39merror([32m"
Failed to parse 
service account key 
from Base64 or JSON."
[39m[33m,[39m deco
deError)[33m;[39m
    [31m[1m>[22m[
39m[90m 22 |[39m   
          
[36mreturn[39m [36
mnull[39m[33m;[39m
     [90m    |[39m 
              
[31m[1m^[22m[39m
     [90m 23 |[39m 
        }
     [90m 24 |[39m 
    }
     [90m 25 
|[39m[0m

      at Runtime.crea
teScriptFromCode (nod
e_modules/jest-runtim
e/build/index.js:1505
:14)
      at 
Object.<anonymous> (n
ode_modules/jwks-rsa/
src/utils.js:1:116)
      at 
Object.<anonymous> (n
ode_modules/jwks-rsa/
src/JwksClient.js:2:3
3)
      at 
Object.<anonymous> (n
ode_modules/jwks-rsa/
src/index.js:1:126)
      at 
Object.<anonymous> (n
ode_modules/firebase-
admin/lib/utils/jwt.j
s:24:14)
      at 
Object.<anonymous> (n
ode_modules/firebase-
admin/lib/auth/token-
verifier.js:26:15)
      at 
Object.<anonymous> (n
ode_modules/firebase-
admin/lib/auth/base-a
uth.js:26:26)
      at 
Object.<anonymous> (n
ode_modules/firebase-
admin/lib/auth/tenant
-manager.js:23:21)
      at 
Object.<anonymous> (n
ode_modules/firebase-
admin/lib/auth/auth.j
s:22:26)
      at 
Object.<anonymous> (n
ode_modules/firebase-
admin/lib/auth/index.
js:27:16)
      at 
Object.<anonymous> (s
rc/firebase/admin.ts:
22:15)
      at 
Object.<anonymous> (s
rc/server/services/ma
ss-scraper.ts:12:16)
      at 
Object.<anonymous> (s
rc/server/jobs/seo-ge
nerator.ts:11:22)
      at 
Object.<anonymous> (s
rc/app/dashboard/ceo/
actions.ts:152:23)
      at 
Object.<anonymous> (s
rc/app/dashboard/ceo/
__tests__/email-tool.
test.ts:13:18)

Test Suites: 1 
failed, 1 passed, 2 
total
Tests:       19 
passed, 19 total
Snapshots:   0 total
Time:        8.606 s
Ran all test suites 
matching /email-tool.
test.ts/i.
